# simple-pose-ish-estimation

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: camera_calibration.py
