[tool.poetry]
name = "simple-pose-ish-estimation"
version = "0.1.0"
description = "Simple visual-inertial sensor fusion tracking system."
authors = ["StevenAbbott <sbabbott08@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.25.2"
glob2 = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
